# pengine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/pengine/: Game.h  ResourceManager.hpp  System.h  components.h  version.h
include/pengine/components/: Node.h  Sprite.h
include/pengine/systems/: RenderSystem.h
sample/: CMakeLists.txt
sample/src/: main.cpp
src/: version.cpp
src/game/: Game.cpp  initialize.cpp  render.cpp  update.cpp
src/systems/: RenderSystem.cpp
tests/: version_test.cpp
